--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="opg3.js"></script>
     <script src="opg4.js"></script>
     <script src="opg5.js"></script>
+    <script src="opg6.js"></script>
 </head>
 <body>
     
